[gd_scene load_steps=5 format=3 uid="uid://c8qh5j3k2mam4"]

[ext_resource type="Script" path="res://scripts/rhythm_challenge.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bvxk3nqj5rt2y" path="res://objects/rhythm_manager.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://cnw8f4h2r8p3q" path="res://objects/music_manager.tscn" id="3"]
[ext_resource type="PackedScene" path="res://objects/rhythm_ui.tscn" id="4"]

[node name="RhythmChallenge" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0
color = Color(0.1, 0.05, 0.15, 1)

[node name="RhythmManager" parent="." instance=ExtResource("2")]

[node name="MusicManager" parent="." instance=ExtResource("3")]

[node name="HitLine" type="ColorRect" parent="."]
offset_left = -200.0
offset_top = 275.0
offset_right = 200.0
offset_bottom = 285.0
color = Color(1, 1, 1, 0.3)

[node name="KeyListenerDown" type="ColorRect" parent="."]
offset_left = -75.0
offset_top = 300.0
offset_right = -25.0
offset_bottom = 350.0
color = Color(1, 0, 0, 0.5)

[node name="Label" type="Label" parent="KeyListenerDown"]
offset_left = 10.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 40.0
text = "↓"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyListenerLeft" type="ColorRect" parent="."]
offset_left = -190.0
offset_top = 300.0
offset_right = -140.0
offset_bottom = 350.0
color = Color(0, 0, 1, 0.5)

[node name="Label" type="Label" parent="KeyListenerLeft"]
offset_left = 10.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 40.0
text = "←"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyListenerUp" type="ColorRect" parent="."]
offset_left = 41.0
offset_top = 300.0
offset_right = 91.0
offset_bottom = 350.0
color = Color(1, 1, 0, 0.5)

[node name="Label" type="Label" parent="KeyListenerUp"]
offset_left = 10.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 40.0
text = "↑"
horizontal_alignment = 1
vertical_alignment = 1

[node name="KeyListenerRight" type="ColorRect" parent="."]
offset_left = 151.0
offset_top = 300.0
offset_right = 201.0
offset_bottom = 350.0
color = Color(0, 1, 0, 0.5)

[node name="Label" type="Label" parent="KeyListenerRight"]
offset_left = 10.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 40.0
text = "→"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RhythmUI" parent="." instance=ExtResource("4")]
